--- a/src/index.css
+++ b/src/index.css
@@ -56,13 +56,13 @@ button:active {
   transform: translateY(-3rem);
 }
 
-.container h1 {
+.container > h1 {
   margin-top: 1rem;
   text-align: center;
   font-size: 1.5rem;
 }
 
-.container p {
+.container > p {
   margin-top: 1.5rem;
   text-align: center;
   line-height: 1.5rem;
