--- a/src/index.css
+++ b/src/index.css
@@ -34,13 +34,11 @@ button {
   background-color: var(--moderate-cyan);
   border:none ;
   border-radius: 2rem;
+  transition: background-color .3s ease;
 }
 
 button:hover {
   cursor: pointer;
-}
-
-button:active {
   background-color: var(--dark-cyan);
 }
 
