finish ThankYou component

--- a/src/components/MenuHeader.css
+++ b/src/components/MenuHeader.css
@@ -34,6 +34,11 @@
     align-items: center;
 }
 
+.menu-item:hover {
+    cursor: pointer;
+}
+
 .menu-item:last-child {
     border-bottom: none;
 }
+
