--- a/src/components/EnterPledge.css
+++ b/src/components/EnterPledge.css
@@ -66,6 +66,11 @@
     transition: background-color .3s ease;
 }
 
+#form-enter-pledge input[type="submit"]:hover {
+    cursor: pointer;
+    background-color: var(--dark-cyan);
+}
+
 @media (min-width: 660px) {
     #form-enter-pledge {
         display: flex;
