--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,6 +1,6 @@
 .modal {
     overflow: auto;
-    position: absolute;
+    position: fixed;
     background-color: rgba(0, 0, 0, .3);
     top: 0;
     left: 0;
