--- a/src/components/BackThisProject.css
+++ b/src/components/BackThisProject.css
@@ -25,6 +25,7 @@
     padding-right: 1.5rem;
     color: hsla(0,0%,0%, .5);
     background-color: hsl(0, 0%, 48%, .1);
+    transition: color .3s ease;
 }
 
 .flex-wrapper-bookmark {
@@ -39,7 +40,7 @@ circle {
     transition: fill .3s ease;
 }
 
-.flex-wrapper-bookmark:active circle  {
+#bookmark-circle  {
     fill: hsl(176, 72%, 28%);
 }
 
@@ -47,16 +48,13 @@ path {
     transition: fill .3s ease;
 }
 
-.flex-wrapper-bookmark:active path  {
+#bookmark-path  {
     fill: white;
 }
 
-#bookmark {
-    transition: color .3s ease;
-}
-
-.flex-wrapper-bookmark:active #bookmark  {
+.bookmark-btn#bookmark  {
     color: var(--dark-cyan);
+    width: 11rem;
 }
 
 @media (min-width: 660px) {
